Fixed photoset row heights on small devices

--- a/static/less/dash.less
+++ b/static/less/dash.less
@@ -915,7 +915,8 @@ noscript p {
         margin-left: 0;
     }
     
-    .row-1 a {
+    .row-1 a,
+    .row-1:only-child img {
         width: 100%;
     }
 
